documentation for register api added
